# ExampleASAN

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/gpxblog/exampleasan/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/gpxblog/exampleasan/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/gpxblog/exampleasan/: ExampleUnitTest.java
app/wrap_add_dir/res/arm64-v8a/: wrap.sh
app/wrap_add_dir/res/armeabi-v7a/: wrap.sh
gradle/wrapper/: gradle-wrapper.properties
